# GhostPort

./: .gitignore  CMakeLists.txt  LICENSE  README.md  deploy.ps1  vcpkg.json
.github/workflows/: release.yml
src/: ipc_contract.hpp  main.cpp  scanner.hpp
